# geotorch

./: .gitignore  DAVISTENSOR_PHASE1_COMPLETION.md  DAVISTENSOR_SPEC.md  README.md  README_DAVISTENSOR.md  pyproject.toml  run_tests.py  spec.md
.github/workflows/: test.yml
archive/: .gitignore
benchmarks/: __init__.py  convergence.py  hard_benchmark.py  optimizer_step.py  run_all.py
davistensor/: README.md  __init__.py  benchmark.py  gpu_benchmark.py  pyproject.toml  run_tests.py  tensor.py
davistensor/autograd/: __init__.py  engine.py  geometric_grad.py  grad_fn.py
davistensor/core/: __init__.py  array_api.py  storage.py
davistensor/examples/: demo.py  hyperbolic_embedding.py  product_demo.py  spd_demo.py
davistensor/manifolds/: __init__.py  base.py  hyperbolic.py  product.py  spd.py  sphere.py
davistensor/nn/: __init__.py  activation.py  attention.py  container.py  embedding.py  linear.py  module.py  normalization.py  pooling.py
davistensor/spec/: ROADMAP.md  autograd_spec.py  layers_spec.py  product_spec.py  spd_spec.py
examples/: benchmark.py  brain_connectivity.py  geo_rag.py  geometric_recommender.py  geometric_transformer.py  hyperbolic_hierarchy.py  knowledge_graph.py  metric_learning.py  optimizer_demo.py  phase4_demo.py  poincare_embeddings.py  product_kg.py  worked_example.py
geotorch/: __init__.py  manifold.py  tensor.py
geotorch/manifolds/: __init__.py  davis.py  euclidean.py  hyperbolic.py  manifold.py  product.py  spd.py  sphere.py
geotorch/nn/: __init__.py  attention.py  kv_cache.py  layers.py  parameter.py
geotorch/optim/: __init__.py  fused.py  radam.py  rsgd.py
geotorch/storage/: __init__.py  binning.py  cache.py  storage.py
tests/: __init__.py  conftest.py  test_attention.py  test_davistensor.py  test_layers.py  test_manifolds.py  test_optimizers.py  test_phase5.py  test_storage.py  test_tensors.py
