[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geotorch"
version = "0.1.0"
description = "Manifold-Native Deep Learning Framework"
authors = [
    {name = "Bee Rosa Davis"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/nurdymuny/geotorch"
Documentation = "https://github.com/nurdymuny/geotorch/blob/main/spec.md"
Repository = "https://github.com/nurdymuny/geotorch"

[tool.setuptools.packages.find]
where = ["."]
include = ["geotorch*"]
exclude = ["tests*"]
