[project]
name = "davistensor"
version = "0.1.0"
description = "A geometry-native tensor library where tensors know their own geometry"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "mypy>=1.0.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
